deployment/worker-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-api
spec:
  selector:
    matchLabels:
      app: worker-api
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: worker-api
    spec:
      containers:
        - image: floresfrankd/worker-api:0.0.1
          name: worker-api
          ports:
            - containerPort: 3000
              name: worker-api
          resources:
            requests:
              memory: "128Mi"
              cpu: "512m"
            limits:
              memory: "256Mi"
              cpu: "1024m"

---
apiVersion: v1
kind: Service
metadata:
  name: worker-api
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: worker-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-worker-api
  labels:
    name: worker-api
spec:
  rules:
    - host: worker-api.guachex.local
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: worker-api
                port:
                  number: 3000
